# MAMMAL_Cognitive_Enhancement_Drug_Repurposing

./: .gitignore  CITATIONS.bib  FUTURE_WORK.md  GAPS_AND_RESEARCH_DIRECTIONS.md  PROJECT_STATUS.md  README.md  environment.yml  pyproject.toml
configs/: auto_recalibration.yaml  thresholds.yaml  weights.yaml  weights_calibrated.yaml
design/: PHASE_0_5_DECISION_RECORD.md  README.md  T1_CHEMBL_AUDIT_VERDICT.md  V2_HYBRID_ARCHITECTURE.md  V2_STATUS_AND_FORWARD_PLAN.md  V3_ATTACK_PLAN.md  V3_STATUS_AND_FORWARD_PLAN.md  V4_STATUS_AND_FORWARD_PLAN.md  V6_ARCHITECTURE_PLAN.md  WSL2_VALIDATION_RECORD.md
docs/: ARCHITECTURE_REVIEW.md  BUG_AUDIT_2026-06.md  ENVIRONMENTS.md  LEDGER_CURATION.md  MAMMAL_SETUP.md
notebooks/: 00_smoke_test.ipynb
reports/: MH_IMPLEMENTATION_ROADMAP.md  README.md  SUBMISSION_CHECKLIST.md  allosteric_audit.md  allosteric_ltr_v1.md  biorxiv_submission_note.md  boltzina_allosteric_audit.md  brain_region_v1.md  calibration_apply_v1.md  calibration_comparison_v1.md  calibration_report.md  calibrator_qc_v1.md  chembl_target_id_audit.md  chembl_target_id_audit_sqlite.md  chemcpa_real_lincs_scale_comparison.md  chemcpa_real_lincs_training_cognition.md  chemcpa_real_lincs_training_full.md  chemcpa_real_lincs_training_large.md  clinical_trials_v1.md  cluster_c_v1.md  cluster_d_foundation_v1.md  cluster_d_nuts_expanded_v1.md  cluster_d_nuts_expanded_v2_mh8_ta99.md  constructive_predictor_v1.md  cover_letter_biorxiv.md  cover_letter_journal.md  ctgov_pull_v1.md  disagreement_axis_v1.md  disagreement_signal_v1.md  disease_reframe_v1.md  fusion_calibration_diff.md  fusion_tanimoto_addition_diff.md  gate2_multi_modulator_v1.md  hierarchical_bayes_v1.md  hypothesis_audit_v1.md  integration_paper_draft.md  ledger_expansion_v1.md  liability_audit_v1.md  liability_audit_v1_absolute.md  (+50 more)
tests/: conftest.py  (+47 more)
(+498 files in other folders)
